--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.6.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.6"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.6.6",
+    "swagger-ui-express": "^4.6.0"
   }
 }
